cmake_minimum_required (VERSION 3.1)
project (async-lru-cache)
set (CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
set(CMAKE_BUILD_TYPE Release)
add_executable(example ${PROJECT_SOURCE_DIR}/example/main.cpp)
add_executable(ctest ${PROJECT_SOURCE_DIR}/ctest/main.cpp)
